fixed success message covering inputs

--- a/src/App.css
+++ b/src/App.css
@@ -101,19 +101,19 @@ input[type=checkbox] {
 
 .success-message {
   position: fixed;
-  top: 50px;
+  height: 150px;
+  top: -150px;
   left: 50%;
   transform: translateX(-50%);
   background-color: hsl(187, 24%, 22%);
   color: hsl(0, 0%, 100%);
   padding: 1.5em 2em;
   border-radius: 1em;
-  transition: opacity 0.5s;
-  opacity: 0;
+  transition: transform 0.5s;
 }
 
 .success-message.on {
-  opacity: 1;
+  transform: translate(-50%, 120%);
 }
 
 /* Attribution */
